<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>graph_creator</name>
  <version>0.0.0</version>
  <description>The graph_creator package</description>
  <maintainer email="abubakarsiddiq@todo.todo">abubakarsiddiq</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>graph_creator_msgs</depend>
  <depend>graph_msgs</depend>
  <depend>libboost-filesystem-dev</depend>
  <depend>libboost-system-dev</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>