<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>graph_visual_control</name>
  <version>0.0.0</version>
  <description>The graph_visual_control package.</description>
  <maintainer email="abubakarsiddiq@todo.todo">abubakarsiddiq</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>graph_msgs</depend>
  <depend>tf2</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
