<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>start_robot</name>
  <version>0.0.0</version>
  <description>Main launch package for the Zeus robot</description>
  <maintainer email="abubakarsiddiq@todo.todo">abubakarsiddiq</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>anscer_description</exec_depend>
  <exec_depend>lower_level_controller</exec_depend>
  <exec_depend>robot_pose_publisher</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <!-- <exec_depend>anscer_teleop</exec_depend> -->
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
